cloudformation/services/vibeio/security_groups.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Network Security Groups.",
  "Parameters": {
    "Environment": {
      "Description": "Environment name assigned to EC2 instances (e.g. 'prod' or 'test').",
      "Type": "String",
      "Default": "",
      "ConstraintDescription": "Must be a string."
    },
    "Project" : {
      "Description" : "Project name.",
      "Type" : "String",
      "Default" : "",
      "ConstraintDescription" : "Must be a string."
    },
    "VPCCIDR": {
      "Description": "VPCCIDR",
      "Type": "String",
      "Default" : ""
    },
    "VPC": {
      "Description": "VPC ID",
      "Type": "AWS::EC2::VPC::Id"
    },
    "ECSClusterSecurityGroup": {
      "Description": "ECS Cluster Security Group",
      "Type": "String",
      "Default": ""
    }
  },
  "Resources": {
    "ALBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable ELB.",
        "VpcId": { "Ref": "VPC" },
        "SecurityGroupIngress": [
          { "IpProtocol": "tcp", "FromPort": "7666", "ToPort": "7666", "CidrIp": { "Ref": "VPCCIDR" }},
          { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "0.0.0.0/0" }
        ],
        "SecurityGroupEgress": [
          { "IpProtocol": "tcp", "FromPort": "0", "ToPort": "65535", "SourceSecurityGroupId": { "Ref" : "ECSClusterSecurityGroup" }},
          { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "SourceSecurityGroupId": { "Ref" : "ECSClusterSecurityGroup" }},
          { "IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "SourceSecurityGroupId": { "Ref" : "ECSClusterSecurityGroup"}}
        ],
        "Tags" : [
          { "Key" : "Name", "Value": "ECS-ALB" }
        ]
      }
    },
    "RDSSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "RDS Cluster Security Group.",
        "VpcId": { "Ref": "VPC" },
        "SecurityGroupIngress": [
          { "IpProtocol": "tcp", "FromPort": "5432", "ToPort": "5432", "CidrIp": { "Ref": "VPCCIDR" }}
        ],
        "SecurityGroupEgress": [
        ],
        "Tags" : [
          { "Key" : "Name", "Value": "RDS-Cluster-Security-Group" }
        ]
      }
    }
  },
  "Outputs": {
    "ALBSecurityGroup": {
      "Description": "ALB Security Group ID",
      "Value": { "Ref": "ALBSecurityGroup" }
    },
    "RDSSecurityGroup": {
      "Description": "RDS Security groups",
      "Value": { "Ref": "RDSSecurityGroup" }
    }
  }
}
